--- a/TP EXPRESS/views/login.ejs
+++ b/TP EXPRESS/views/login.ejs
@@ -8,7 +8,8 @@
     <h1>Se connecter</h1>
     <form action=" /login" method="post">
       Nom:<input type="text" name="nom"><br>
-      Mot de passe:<input type="password" name="mdp"><br>
+      mot de passe:<input type="password" name="mdp"><br>
+      <!-- clé api : <input type="text" name="api"><br> -->
       <button type="submit">Valider</button>
     </form>
   </body>
